# signals

./: CMakeLists.txt  README.md  main.cpp  signal.h  signal.vcxproj  signal.vcxproj.filters  signals.sln  signals.vcxproj  signals.vcxproj.filters  test.cpp
include/: signals.h
include/szabi/: signals.h
